add PostPage responsive design

--- a/post/ben-kimim.mdx
+++ b/post/ben-kimim.mdx
@@ -3,11 +3,15 @@ date: '2022-10-10'
 title: 'Dummy Blog Yazısı'
 subtitle: 'Markdown Özelliklerini Kullanarak Yazı Örneği'
 image: 'https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80'
+author: 'Sedat as Korkmaz'
+profileImage: 'https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=250&q=80'
+profileLink: 'https://twitter.com/sedat_kimki'
+profileName: '@sedatkimki'
 ---
 
 Merhaba, bu dummy blog yazısı Markdown özelliklerini kullanarak nasıl bir yazı yazabileceğinizi göstermek amacıyla oluşturulmuştur.
 
-### Başlık 1
+## Başlık 1
 
 Bu, birinci seviye başlık örneğidir. Başlıkları **`#`** işaretiyle oluşturabilirsiniz. Başlık 1 en üst seviyede yer alırken, başlık 6 en alt seviyededir.
 
@@ -15,11 +19,11 @@ Bu, birinci seviye başlık örneğidir. Başlıkları **`#`** işaretiyle oluş
 
 Bu, ikinci seviye başlık örneğidir. İkinci seviye başlıklar için **`##`** kullanılır.
 
-### Başlık 3
+#### Başlık 3
 
 Bu, üçüncü seviye başlık örneğidir. Üçüncü seviye başlıklar için **`###`** kullanılır.
 
-### Başlık 4
+##### Başlık 4
 
 Bu, dördüncü seviye başlık örneğidir. Dördüncü seviye başlıklar için **`####`** kullanılır.
 
