--- a/post/deprem-nedir.mdx
+++ b/post/deprem-nedir.mdx
@@ -9,7 +9,7 @@ profileLink: 'https://www.linkedin.com/in/abdullahkabak'
 profileName: '@abdullahkabak'
 ---
 
-# **Deprem: Yerin Derinliklerinden Gelen Titreşimler**
+## **Deprem: Yerin Derinliklerinden Gelen Titreşimler**
 
 **Deprem**, yer kabuğundaki kayaçların ani bir enerji serbest bırakması sonucunda meydana gelen doğal bir olaydır. Bu enerji serbest bırakması sonucunda yer kabuğunda titreşimler ve dalgalanmalar oluşur. Depremler, genellikle yer kabuğunda bulunan **fay hatlarındaki hareketlerden** kaynaklanır. Fay hatları, yer kabuğundaki kayaç tabakalarının yan yana yer değiştirmesiyle meydana gelen çatlaklardır.
 
