--- a/post/deprem-oncesi-alinacak-onlemler.mdx
+++ b/post/deprem-oncesi-alinacak-onlemler.mdx
@@ -11,43 +11,43 @@ profileName: '@ezmemis'
 
 Depremler doğanın en öngörülemeyen ve yıkıcı güçlerinden biridir. İnsanlar genellikle depremin ne zaman ve nerede gerçekleşeceğini tahmin edemezler. Ancak, bireysel ve toplu düzeyde alabileceğimiz bazı önlemlerle bu doğal felaketlere karşı daha hazırlıklı olabiliriz. İşte deprem öncesinde güvende olma şansınızı artırmak için atmanız gereken adımlar:
 
-# 1- Deprem Riskinizi Bilin
+## 1- Deprem Riskinizi Bilin
 
 İlk adım, yaşadığınız bölgenin deprem riskini anlamaktır. Depremler her yerde olabilir, ancak bazı bölgelerde daha sık görülür. İkamet ettiğiniz alanın deprem geçmişini ve riskini araştırmak, hangi önlemleri almanız gerektiğini anlamanıza yardımcı olacaktır.
 
 ![resim1](/images/posts/deprem-oncesi-alinacak-onlemler/resim1.png)
 
-# 2- Deprem Kiti Hazırlayın
+## 2- Deprem Kiti Hazırlayın
 
 İlk yardım çantası, su ve en az üç günlük yiyecek, piller, el feneri, düdük, hijyen ürünleri, ilaçlar ve diğer acil durum malzemeleri gibi temel öğeleri içeren bir deprem kiti oluşturun. Deprem sonrası eczaneler ve mağazalar kapalı olabilir ve bu malzemeler hayati önem taşıyabilir.
 
 ![resim2](/images/posts/deprem-oncesi-alinacak-onlemler/resim2.png)
 
-# 3- Evinizdeki Tehlikeleri Değerlendirin ve Azaltın
+## 3- Evinizdeki Tehlikeleri Değerlendirin ve Azaltın
 
 Evlerimizdeki eşyalar deprem sırasında ciddi yaralanmalara neden olabilir. Büyük mobilyaları duvara sabitlemek, ağır objeleri düşebileceği yerlerden kaldırmak ve potansiyel tehlike oluşturabilecek eşyaların düşmesine karşı önlem almak önemlidir.
 
 ![resim3](/images/posts/deprem-oncesi-alinacak-onlemler/resim3.png)
 
-# 4- Ev ve Aile Planı Yapın
+## 4- Ev ve Aile Planı Yapın
 
 Ailenizle birlikte deprem sırasında ve sonrasında neler yapmanız gerektiği üzerine bir plan yapın. Bu plan, deprem sonrasında buluşma noktalarını, alternatif iletişim yöntemlerini ve evin içinde ve dışında güvenli yerleri içermelidir.
 
 ![resim4](/images/posts/deprem-oncesi-alinacak-onlemler/resim4.png)
 
-# 5- "Çök, Kapan, Tutun" Tekniğini Öğrenin
+## 5- "Çök, Kapan, Tutun" Tekniğini Öğrenin
 
 Deprem anında nasıl korunacağınızı bilmek hayati önem taşır. "Çök, Kapan, Tutun" bu durumda en etkili stratejidir. Bu teknik, deprem sarsıntısının başlamasıyla birlikte, etrafınızdaki güvenli bir bölgeyi bulup orada çökmenizi, başınızı ve boynunuzu korumanızı ve sarsıntı tamamen durana kadar bu pozisyonda kalmanızı gerektirir.
 
 ![resim5](/images/posts/deprem-oncesi-alinacak-onlemler/resim5.png)
 
-# 6-Acil Durum Uygulamaları ve Bilgi Kaynaklarından Yararlanın
+## 6-Acil Durum Uygulamaları ve Bilgi Kaynaklarından Yararlanın
 
 Çeşitli mobil uygulamalar ve çevrimiçi kaynaklar, deprem öncesi ve sonrası bilgileri, ilk yardım talimatlarını ve acil durum planlarını içerir. Bu tür uygulamalar ve kaynaklar, depreme daha iyi hazırlanmanıza yardımcı olabilir.
 
 ![resim6](/images/posts/deprem-oncesi-alinacak-onlemler/resim6.png)
 
-# 7- Deprem Simülasyon Araçlarını Kullanın
+## 7- Deprem Simülasyon Araçlarını Kullanın
 
 En etkili hazırlık, gerçek bir durumu deneyimleyerek ne yapmanız gerektiğini anlamaktır. Günümüzde teknolojinin gelişmesiyle birlikte deprem simülasyon araçları, olası bir depremi yaşama deneyimini sağlar. Bu araçlar, ailenizle birlikte kullanarak, önceden belirlemiş olduğunuz acil durum planınızı uygulayabilir ve "Çök, Kapan, Tutun" gibi yaşamsal korunma tekniklerini deneyimleyebilirsiniz. Bu sayede gerçek bir deprem durumunda nasıl tepki vermeniz gerektiğini daha iyi anlayabilir ve bu konuda pratik yapabilirsiniz.
 
